# ConfScope

./: .gitignore  .prettierrc  CHANGELOG.md  CREDITS.md  README.md  app.go  app_test.go  eslint.config.js  go.mod  index.html  main.go  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  wails.json
.github/profile/: README.md
.github/workflows/: release.yml
docs/: GIT_TRACKING_ANALYSIS.md
docs/todo/: todo.md
internal/nacos/: auth.go  client.go  client_test.go  config.go  decode.go  history.go  mse_auth.go  mse_auth_test.go  namespace.go  request.go  types.go  version.go
internal/provider/: local.go  local_test.go  nacos.go  nacos_test.go  types.go
internal/ssh/: manager.go  manager_test.go  tunnel.go  tunnel_test.go
internal/updatecheck/: checker.go  checker_test.go  platform_linux.go  platform_other.go  platform_windows.go
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/nacos/: mod.rs
src/api/: app.test.ts  app.ts  configCenter.test.ts  configCenter.ts  nacos.test.ts  nacos.ts
src/components/: About.test.tsx  About.tsx  AlertModal.tsx  CodeEditor.tsx  CodeView.tsx  Combobox.tsx  ConfigBrowser.test.tsx  ConfigBrowser.tsx  ConfigEditor.test.tsx  ConfigEditor.tsx  ConfirmModal.test.tsx  ConfirmModal.tsx  ConnectionManager.test.tsx  ConnectionManager.tsx  CopyButton.test.tsx  CopyButton.tsx  DeleteConfirm.test.tsx  DeleteConfirm.tsx  DiffPanel.test.tsx  DiffPanel.tsx  DiffView.test.tsx  DiffView.tsx  ErrorDialog.test.tsx  (+17 more)
(+44 files in other folders)
